--- a/pages/toc.html
+++ b/pages/toc.html
@@ -18,6 +18,11 @@
                 <tr data-template="app:toc"/>
             </table>
         </div>
+        <div class="panel-footer">
+            <small>
+                <a href="../exgit/fetch.xql">fetch latest data</a>
+            </small>
+        </div>
     </div>
     <script>var table = $('#myTable').DataTable({
             keepConditions: true,
