--- a/pages/index.html
+++ b/pages/index.html
@@ -7,13 +7,23 @@
         </ol><!-- Wrapper for slides -->
         <div class="carousel-inner" role="listbox">
             <div class="item active">
-                <img src="$app-root/resources/img/ACDH_Panorama_Postkarte_motiv01.jpg" alt="First" width="1200" height="600" title="CC-BY 4.0, Sandra Lehecka"/>
-                <div class="carousel-caption">ACDH Wien, Sonnenfelsgasse 19</div>
+                <img src="$app-root/resources/img/IMG_8433.JPG" alt="First" width="1200" height="600" title="CC-BY 4.0, Peter Andorfer"/>
+                <div class="carousel-caption">
+                    <h2>Plan einer Salzpfanne</h2>
+                    <p>
+                        <a href="http://permalink.obvsg.at/AC08720391" style="color:white">Linderische Schriften</a>
+                    </p>
+                </div>
             </div>
             
             <div class="item">
-                <img src="$app-root/resources/img/ACDH_Panorama_Postkarte_motiv02.jpg" alt="a nice feature picture" width="1200" height="600" title="CC-BY 4.0, Sandra Lehecka"/>
-                <div class="carousel-caption">ACDH Wien, Sonnenfelsgasse 19</div>
+                <img src="$app-root/resources/img/IMG_8755.JPG" alt="a nice feature picture" width="1200" height="600" title="CC-BY 4.0, Peter Andorfer"/>
+                <div class="carousel-caption">
+                    <h2>Titelei</h2>
+                    <p>
+                        <a href="http://permalink.obvsg.at/AC08720391" style="color:white">Linderische Schriften</a>
+                    </p>
+                </div>
             </div>
         </div><!-- Left and right controls -->
         <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev"><!--<span class="sr-only">Previous</span>--></a>
